syntax = "proto3";

package user;

option go_package = "proto/userpb;userpb";

message GetUserInfoRequest {
    int64 user_id = 1;
}

message GetUserInfoResult {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string avatar_url = 5;
    string role = 6;
}

service UserService {
    rpc GetUserInfoByUserID(GetUserInfoRequest)
        returns (GetUserInfoResult);
}
